fix implementation to support more tests